fetch-exemplo-finalizado

--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" defer></script>
+    <style>
+        body{
+            background-color: brown;
+        }
+        main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-flow: column wrap;
+            background-color: rgb(221, 69, 69);
+            border: 5px solid black;
+        }
+        h1{
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: bold;
+            font-size: 40px;
+            text-shadow: 2px 2px 2px black;
+        }
+        ul{
+            background-color: aliceblue;
+            border: 1px solid black;
+            list-style: circle;
+            margin: 5px;
+        }
+        button{
+            background-color: brown;
+            color: white;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            margin: 5px;
+            padding: 5px;
+            border-radius: 5px;
+        }
+    </style>
     <title>Exemplo API Fetch</title>
 </head>
 <body>
